--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -35,6 +35,91 @@
   <div class="wbdv-selection row"
        *ngIf="selection === 'Manage Users'">
 
+    <ng-template #content let-c="close" let-d="dismiss">
+      <div class="modal-header">
+        <h4 class="modal-title"
+            *ngIf="!newRecipe._id">
+          Create a user
+        </h4>
+        <h4 class="modal-title"
+            *ngIf="newRecipe._id">
+          Update a user
+        </h4>
+        <button type="button"
+                class="close"
+                aria-label="Close"
+                (click)="d('Cross click')">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label>Username</label>
+          <input [(ngModel)]="newUser.username"
+                 placeholder="username"
+                 class="form-control"/>
+        </div>
+
+        <div class="form-group">
+          <label>Password</label>
+          <input [(ngModel)]="newUser.password"
+                 placeholder="password"
+                 type="password"
+                 class="form-control"/>
+        </div>
+
+        <div class="form-group">
+          <label>First Name</label>
+          <input [(ngModel)]="newUser.firstName"
+                 placeholder="first name"
+                 class="form-control"/>
+        </div>
+
+        <div class="form-group">
+          <label>Last Name</label>
+          <input [(ngModel)]="newUser.lastName"
+                 placeholder="last name"
+                 class="form-control"/>
+        </div>
+
+        <div class="form-group">
+          <label>Email</label>
+          <input [(ngModel)]="newUser.email"
+                 placeholder="email address"
+                 class="form-control"/>
+        </div>
+
+        <div class="form-group">
+          <label>Role</label>
+          <select [(ngModel)]="newUser.role"
+                  class="form-control">
+            <option value="" disabled selected>What do you want to be?</option>
+            <option value="Customer">Customer</option>
+            <option value="Chef">Chef</option>
+            <option value="Critic">Critic</option>
+          </select>
+        </div>
+
+        <button (click)="createUser()"
+                *ngIf="!newRecipe._id"
+                class="btn btn-dark btn-block">
+          Add
+        </button>
+      </div>
+      <div class="modal-footer">
+        <button type="button"
+                class="btn btn-light"
+                (click)="c('Close click')">
+          Close
+        </button>
+      </div>
+    </ng-template>
+
+    <button class="btn btn-dark btn-block mb-2 mr-2"
+            (click)="openAddUserModal(content)">
+      Add a user
+    </button>
+
     <div class="col-4">
       <ul class="list-group">
         <li class="list-group-item wbdv-users-heading">Chefs</li>
@@ -103,5 +188,5 @@
       </li>
     </ul>
   </div>
-
+  </div>
 </div>
