added update user functionality in admin page

--- a/src/app/admin-page/admin-page.component.css
+++ b/src/app/admin-page/admin-page.component.css
@@ -43,3 +43,11 @@
 .btn.btn-outline-light {
   margin-right: 5px;
 }
+
+.btn.btn-danger.fa.fa-trash {
+  margin-right: 5px;
+}
+
+.btn.btn-primary.fa.fa-pencil {
+  margin-right: 5px;
+}
