--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -32,10 +32,10 @@
     </nav>
   </div>
 
-  <div class="wbdv-selection row"
+  <div class="wbdv-selection"
        *ngIf="selection === 'Manage Users'">
 
-    <ng-template #content let-c="close" let-d="dismiss">
+    <ng-template #content2 let-c="close" let-d="dismiss">
       <div class="modal-header">
         <h4 class="modal-title"
             *ngIf="!newUser._id">
@@ -53,10 +53,23 @@
         </button>
       </div>
       <div class="modal-body">
+        <div class="alert alert-danger alert-dismissible fade show"
+             role="alert"
+             *ngIf="alertUsername == true">
+          Username is already taken. Please try another username.
+          <button type="button"
+                  class="close"
+                  data-dismiss="alert"
+                  (click)="removeUsernameAlert()"
+                  aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+
         <div class="form-group">
           <label>Username</label>
           <input [(ngModel)]="newUser.username"
-                 [readonly]="newUser.username"
+                 [readonly]="newUser._id"
                  placeholder="username"
                  class="form-control"/>
         </div>
@@ -64,7 +77,7 @@
         <div class="form-group">
           <label>Password</label>
           <input [(ngModel)]="newUser.password"
-                 [readonly]="newUser.username"
+                 [readonly]="newUser._id"
                  placeholder="password"
                  type="password"
                  class="form-control"/>
@@ -123,87 +136,179 @@
       </div>
     </ng-template>
 
-    <button class="btn btn-dark btn-block mb-2 mr-2"
-            (click)="openAddUserModal(content)">
+    <button class="btn btn-dark btn-block mb-2"
+            (click)="openAddUserModal(content2)">
       Add a user
     </button>
 
-    <div class="col-4">
-      <ul class="list-group">
-        <li class="list-group-item wbdv-users-heading">Chefs</li>
-        <li *ngFor="let chef of chefs"
-            (click)="navigateToProfile(chef.username)"
-            class="list-group-item wbdv-user">
-          {{chef.username}}
-          <button class="btn btn-danger fa fa-trash float-right"
-                  (click)="deleteUser(chef)">
-          </button>
-          <button class="btn btn-primary fa fa-pencil float-right"
-                  (click)="openEditUserModal(content, chef)">
-          </button>
-        </li>
-      </ul>
-    </div>
+    <div class="row">
+      <div class="col-4">
+        <ul class="list-group">
+          <li class="list-group-item wbdv-users-heading">Chefs</li>
+          <li *ngFor="let chef of chefs"
+              (click)="navigateToProfile(chef.username)"
+              class="list-group-item wbdv-user">
+            {{chef.username}}
+            <button class="btn btn-danger fa fa-trash float-right"
+                    (click)="deleteUser(chef)">
+            </button>
+            <button class="btn btn-primary fa fa-pencil float-right"
+                    (click)="openEditModal(content2, chef)">
+            </button>
+          </li>
+        </ul>
+      </div>
 
-    <div class="col-4">
-      <ul class="list-group">
-        <li class="list-group-item wbdv-users-heading">Critics</li>
-        <li *ngFor="let critic of critics"
-            (click)="navigateToProfile(critic.username)"
-            class="list-group-item wbdv-user">
-          {{critic.username}}
-          <button class="btn btn-danger fa fa-trash float-right"
-                  (click)="deleteUser(critic)">
-          </button>
-          <button class="btn btn-primary fa fa-pencil float-right"
-                  (click)="openEditUserModal(content, critic)">
-          </button>
-        </li>
-      </ul>
-    </div>
+      <div class="col-4">
+        <ul class="list-group">
+          <li class="list-group-item wbdv-users-heading">Critics</li>
+          <li *ngFor="let critic of critics"
+              (click)="navigateToProfile(critic.username)"
+              class="list-group-item wbdv-user">
+            {{critic.username}}
+            <button class="btn btn-danger fa fa-trash float-right"
+                    (click)="deleteUser(critic)">
+            </button>
+            <button class="btn btn-primary fa fa-pencil float-right"
+                    (click)="openEditModal(content2, critic)">
+            </button>
+          </li>
+        </ul>
+      </div>
 
-    <div class="col-4">
-      <ul class="list-group">
-        <li class="list-group-item wbdv-users-heading">Customers</li>
-        <li *ngFor="let customer of customers"
-            (click)="navigateToProfile(customer.username)"
-            class="list-group-item wbdv-user">
-          {{customer.username}}
-          <button class="btn btn-danger fa fa-trash float-right"
-                  (click)="deleteUser(customer)">
-          </button>
-          <button class="btn btn-primary fa fa-pencil float-right"
-                  (click)="openEditUserModal(content, customer)">
-          </button>
-        </li>
-      </ul>
+      <div class="col-4">
+        <ul class="list-group">
+          <li class="list-group-item wbdv-users-heading">Customers</li>
+          <li *ngFor="let customer of customers"
+              (click)="navigateToProfile(customer.username)"
+              class="list-group-item wbdv-user">
+            {{customer.username}}
+            <button class="btn btn-danger fa fa-trash float-right"
+                    (click)="deleteUser(customer)">
+            </button>
+            <button class="btn btn-primary fa fa-pencil float-right"
+                    (click)="openEditModal(content2, customer)">
+            </button>
+          </li>
+        </ul>
+      </div>
     </div>
 
   </div>
 
-  <div class="wbdv-selection row"
+  <div class="wbdv-selection"
        *ngIf="selection === 'Manage Recipes'">
 
-    <div class="col-6">
+    <ng-template #content let-c="close" let-d="dismiss">
+      <div class="modal-header">
+        <h4 class="modal-title"
+            *ngIf="!newRecipe._id">
+          Create a recipe
+        </h4>
+        <h4 class="modal-title"
+            *ngIf="newRecipe._id">
+          Update a recipe
+        </h4>
+        <button type="button"
+                class="close"
+                aria-label="Close"
+                (click)="d('Cross click')">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="form-group">
+          <label>Recipe Name</label>
+          <input [(ngModel)]="newRecipe.name"
+                 placeholder="recipe name"
+                 class="form-control"/>
+        </div>
+
+        <div class="form-group">
+          <label>Ingredients (Add each ingredient on a new line)</label>
+          <textarea [(ngModel)]="newRecipe.ingredients"
+                    placeholder="ingredients"
+                    class="form-control">
+      </textarea>
+        </div>
+
+        <div class="form-group">
+          <label>ImageUrl (Provide 360x360 image size for quality user experience)</label>
+          <input [(ngModel)]="newRecipe.imageUrl"
+                 placeholder="image url of recipe"
+                 class="form-control"/>
+        </div>
+
+        <div class="form-group">
+          <label>Total time required</label>
+          <input [(ngModel)]="newRecipe.totalTime"
+                 placeholder="total time required"
+                 class="form-control"/>
+        </div>
+
+        <div class="form-group">
+          <label>Number of Servings</label>
+          <input [(ngModel)]="newRecipe.numberOfServings"
+                 placeholder="number of servings"
+                 class="form-control"/>
+        </div>
+
+        <button (click)="createRecipe()"
+                *ngIf="!newRecipe._id"
+                class="btn btn-dark btn-block">
+          Add
+        </button>
+        <button (click)="updateRecipe()"
+                *ngIf="newRecipe._id"
+                class="btn btn-dark btn-block">
+          Update
+        </button>
+      </div>
+      <div class="modal-footer">
+        <button type="button"
+                class="btn btn-light"
+                (click)="c('Close click')">
+          Close
+        </button>
+      </div>
+    </ng-template>
+
+    <button class="btn btn-dark btn-block mb-2 mr-2"
+            (click)="openAddUserModal(content)">
+      Add a recipe
+    </button>
+
+    <div class="row">
+      <div class="col-6">
+        <ul class="list-group">
+          <li class="list-group-item wbdv-users-heading">Chef's Special</li>
+          <li *ngFor="let chefSpecial of chefSpecials"
+              (click)="navigateToRecipe(chefSpecial)"
+              class="list-group-item wbdv-recipe">
+            {{chefSpecial.name}}
+            <button (click)="deleteRecipe(chefSpecial)"
+                    class="btn btn-danger fa fa-trash float-right">
+            </button>
+            <button (click)="openEditModal(content, chefSpecial)"
+                    class="btn btn-primary fa fa-pencil float-right">
+            </button>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-6">
       <ul class="list-group">
-        <li class="list-group-item wbdv-users-heading">Chef's Special</li>
-        <li *ngFor="let chefSpecial of chefSpecials"
-            (click)="navigateToRecipe(chefSpecial)"
+        <li class="list-group-item wbdv-users-heading">Yummly's Special</li>
+        <li *ngFor="let yummlySpecial of yummlySpecials"
+            (click)="navigateToRecipe(yummlySpecial)"
             class="list-group-item wbdv-recipe">
-          {{chefSpecial.name}}
+          {{yummlySpecial.name}}
+          <button (click)="deleteRecipe(yummlySpecial)"
+                  class="btn btn-danger fa fa-trash float-right">
+          </button>
         </li>
       </ul>
+      </div>
     </div>
-
-    <div class="col-6">
-    <ul class="list-group">
-      <li class="list-group-item wbdv-users-heading">Yummly's Special</li>
-      <li *ngFor="let yummlySpecial of yummlySpecials"
-          (click)="navigateToRecipe(yummlySpecial)"
-          class="list-group-item wbdv-recipe">
-        {{yummlySpecial.name}}
-      </li>
-    </ul>
-  </div>
   </div>
 </div>
