customizing recipe details page

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,9 +1,9 @@
-.wbdv-navbar {
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  z-index: 2;
-}
+/*.wbdv-navbar {*/
+  /*position: fixed;*/
+  /*top: 0px;*/
+  /*width: 100%;*/
+  /*z-index: 2;*/
+/*}*/
 
 .list-group.wbdv-profile {
   margin-top: 20px;
@@ -17,7 +17,6 @@
   margin-top: 20px;
   margin-bottom: 20px;
   width: 90%;
-  padding-top: 50px;
 }
 
 .wbdv-nav {
