--- a/src/app/recipe-details/recipe-details.component.css
+++ b/src/app/recipe-details/recipe-details.component.css
@@ -1,7 +1,6 @@
 .container {
   margin-bottom: 1.25em;
   margin-top: 1.25em;
-  padding-top: 60px;
 }
 
 .wbdv-recipe {
@@ -11,8 +10,6 @@
 
 .wbdv-recipe-summary {
   color: #a3a3a3;
-  padding-top: 1em;
-  padding-bottom: 1em;
   text-align: center;
 }
 
@@ -40,6 +37,9 @@
 .wbdv-image-wrap {
   display: inline-block;
   position: relative;
+  margin-left: 75px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .wbdv-like-button {
@@ -154,4 +154,18 @@
 img {
   width: 360px;
   height: 360px;
+}
+
+.bg {
+
+  /* The image used */
+  background-image: url("https://pfe-getold.s3.amazonaws.com/basic_article/heart-disease-prevention-strategies-to-help-protect-your-heart-1600x700.jpg?Nj9cu9QbjI3OfuX2w70QqwhK08bIcXn4");
+
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
