--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -1,31 +1,31 @@
 <app-search-bar></app-search-bar>
 
-<div class="container">
-
-  <div class="row">
-    <div class="col-6">
-      <div class="wbdv-image-wrap">
-        <img alt="Image not available"
-             *ngIf="recipeDetails['imageUrl']"
-             src="{{recipeDetails['imageUrl']}}">
-        <button class="btn wbdv-like-button"
-                *ngIf="!(currentUser.username) || !isRecipeLiked && currentUser.role !== 'Admin'"
-                (click)="like()">
-          <i class="fa fa-heart-o wbdv-like-icon"></i>
-        </button>
-        <button class="btn wbdv-liked-button"
-                *ngIf="isRecipeLiked && currentUser.role !== 'Admin'"
-                (click)="unlike()">
-          <i class="fa fa-heart wbdv-liked-icon"></i>
-        </button>
-      </div>
-    </div>
-    <div class="col-6">
-      <h1>
-        {{recipeDetails['name']}}
-      </h1>
+<div class="row bg" style="padding-top: 80px;">
+  <div class="col-5">
+    <div class="wbdv-image-wrap">
+      <img alt="Image not available"
+           *ngIf="recipeDetails['imageUrl']"
+           src="{{recipeDetails['imageUrl']}}">
+      <button class="btn wbdv-like-button"
+              *ngIf="!(currentUser.username) || !isRecipeLiked && currentUser.role !== 'Admin'"
+              (click)="like()">
+        <i class="fa fa-heart-o wbdv-like-icon"></i>
+      </button>
+      <button class="btn wbdv-liked-button"
+              *ngIf="isRecipeLiked && currentUser.role !== 'Admin'"
+              (click)="unlike()">
+        <i class="fa fa-heart wbdv-liked-icon"></i>
+      </button>
     </div>
   </div>
+  <div class="col-7">
+    <h1 style="padding-top: 150px; text-align: center">
+      {{recipeDetails['name']}}
+    </h1>
+  </div>
+</div>
+
+<div class="container">
 
   <div class="wbdv-recipe-summary">
     <div class="wbdv-recipe-summary-item">
