--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -1,6 +1,6 @@
 <app-search-bar></app-search-bar>
 
-<div class="row bg" style="padding-top: 80px;">
+<div class="row" style="padding-top: 80px;">
   <div class="col-5">
     <div class="wbdv-image-wrap">
       <img alt="Image not available"
