--- a/src/app/recipe-details/recipe-details.component.html
+++ b/src/app/recipe-details/recipe-details.component.html
@@ -18,10 +18,8 @@
       </button>
     </div>
   </div>
-  <div class="col-7">
-    <h1 style="padding-top: 150px; text-align: center">
-      {{recipeDetails['name']}}
-    </h1>
+  <div class="col-7 text-center">
+    <h1>{{recipeDetails['name']}}</h1>
   </div>
 </div>
 
