--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,5 +1,4 @@
-<nav class="navbar navbar-dark bg-dark justify-content-between wbdv-navbar row">
-
+<nav class="navbar navbar-dark bg-dark justify-content-between fixed-top row">
   <div class="col-2">
     <h3 class="navbar-brand">
       {{user.username}}
