--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -3,19 +3,23 @@
   margin-bottom: 50px;
 }
 
-.navbar {
-  position: fixed;
-  top: 0px;
-  width: 100%;
-  z-index: 2;
-}
+/*.navbar {*/
+  /*position: fixed;*/
+  /*top: 0px;*/
+  /*width: 100%;*/
+  /*z-index: 2;*/
+/*}*/
 
 .wbdv-navbar .navbar-brand {
   cursor: pointer;
 }
 
 .btn.btn-outline-light {
-  margin-left: 5px;
+  margin-right: 5px;
+}
+
+.btn.btn-dark {
+  margin-right: 15px;
 }
 
 .row {
