--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,53 +1,107 @@
-<nav class="navbar navbar-dark bg-dark">
-  <div class="row wbdv-navbar">
-    <div class="col-2">
-      <h3 class="navbar-brand"
-          (click)="goHome()">
-        <img src="http://icons-for-free.com/icon/download-burger_cheeseburger_fast_food_food_junk_food_icon-7567.ico"
-             width="35px"
-             height="35px">
-        Eze Cuisine
-      </h3>
+<!--<nav class="navbar navbar-dark bg-dark">-->
+  <!--<div class="row wbdv-navbar">-->
+    <!--<div class="col-2">-->
+      <!--<h3 class="navbar-brand"-->
+          <!--(click)="goHome()">-->
+        <!--<img src="http://icons-for-free.com/icon/download-burger_cheeseburger_fast_food_food_junk_food_icon-7567.ico"-->
+             <!--width="35px"-->
+             <!--height="35px">-->
+        <!--Eze Cuisine-->
+      <!--</h3>-->
+    <!--</div>-->
+    <!--<div class="col-7">-->
+      <!--<div class="row">-->
+        <!--<div class="col-11 wbdv-search-input">-->
+          <!--<input class="form-control"-->
+                 <!--[(ngModel)]="searchText"-->
+                 <!--(keyup.enter)="navigate(searchText)"-->
+                 <!--placeholder="Search for recipes"/>-->
+        <!--</div>-->
+        <!--<button type="button"-->
+                <!--(click)="navigate(searchText)"-->
+                <!--class="btn btn-dark wbdv-search-button">-->
+          <!--<span class="fa fa-search"></span>-->
+        <!--</button>-->
+      <!--</div>-->
+    <!--</div>-->
+    <!--<div class="col-3 wbdv-login-register">-->
+      <!--<div *ngIf="!currentUser['username']">-->
+        <!--<a routerLink="/register">-->
+          <!--<button class="btn btn-outline-light my-2 my-sm-0 float-right"-->
+                  <!--type="button">-->
+            <!--Register-->
+          <!--</button>-->
+        <!--</a>-->
+        <!--<a routerLink="/login">-->
+          <!--<button class="btn btn-outline-light my-2 my-sm-0 float-right"-->
+                  <!--type="button">-->
+            <!--Login-->
+          <!--</button>-->
+        <!--</a>-->
+      <!--</div>-->
+      <!--<div *ngIf="currentUser['username']">-->
+        <!--<h3 class="navbar-brand float-right">-->
+          <!--<div (click)="goToProfile()"-->
+               <!--class="wbdv-username-anchor">-->
+            <!--{{currentUser['username']}}-->
+            <!--<i class="fa fa-lg fa-user-circle-o"></i>-->
+          <!--</div>-->
+        <!--</h3>-->
+      <!--</div>-->
+    <!--</div>-->
+  <!--</div>-->
+<!--</nav>-->
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top wbdv-navbar">
+  <h3 class="navbar-brand"
+      (click)="goHome()">
+    EzeCuisine
+  </h3>
+  <button class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          (click)="isCollapsed = !isCollapsed"
+          [attr.aria-expanded]="!isCollapsed"
+          aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse"
+       [ngbCollapse]="isCollapsed"
+       id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+    </ul>
+    <div class="form-inline my-2 my-lg-0">
+      <input class="form-control wbdv-navbar-search"
+             [(ngModel)]="searchText"
+             (keyup.enter)="navigate(searchText)"
+             placeholder="Search for recipes"/>
+      <button type="button"
+              (click)="navigate(searchText)"
+              class="btn btn-dark wbdv-search-button">
+        <span class="fa fa-search"></span>
+      </button>
     </div>
-    <div class="col-7">
-      <div class="row">
-        <div class="col-11 wbdv-search-input">
-          <input class="form-control"
-                 [(ngModel)]="searchText"
-                 (keyup.enter)="navigate(searchText)"
-                 placeholder="Search for recipes"/>
-        </div>
-        <button type="button"
-                (click)="navigate(searchText)"
-                class="btn btn-dark wbdv-search-button">
-          <span class="fa fa-search"></span>
+    <div class="form-inline my-2 my-lg-0"
+         *ngIf="!currentUser['username']">
+      <a routerLink="/login">
+        <button class="btn btn-outline-light my-2 my-sm-0"
+                type="button">
+          Login
         </button>
-      </div>
+      </a>
     </div>
-    <div class="col-3 wbdv-login-register">
-      <div *ngIf="!currentUser['username']">
-        <a routerLink="/register">
-          <button class="btn btn-outline-light my-2 my-sm-0 float-right"
-                  type="button">
-            Register
-          </button>
-        </a>
-        <a routerLink="/login">
-          <button class="btn btn-outline-light my-2 my-sm-0 float-right"
-                  type="button">
-            Login
-          </button>
-        </a>
-      </div>
-      <div *ngIf="currentUser['username']">
-        <h3 class="navbar-brand float-right">
-          <div (click)="goToProfile()"
-               class="wbdv-username-anchor">
-            {{currentUser['username']}}
-            <i class="fa fa-lg fa-user-circle-o"></i>
-          </div>
-        </h3>
-      </div>
+    <div class="form-inline my-2 my-lg-0"
+         *ngIf="!currentUser['username']">
+      <a routerLink="/register">
+        <button class="btn btn-outline-light my-2 my-sm-0"
+                type="button">
+          Register
+        </button>
+      </a>
     </div>
   </div>
 </nav>
