--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,57 +1,3 @@
-<!--<nav class="navbar navbar-dark bg-dark">-->
-  <!--<div class="row wbdv-navbar">-->
-    <!--<div class="col-2">-->
-      <!--<h3 class="navbar-brand"-->
-          <!--(click)="goHome()">-->
-        <!--<img src="http://icons-for-free.com/icon/download-burger_cheeseburger_fast_food_food_junk_food_icon-7567.ico"-->
-             <!--width="35px"-->
-             <!--height="35px">-->
-        <!--Eze Cuisine-->
-      <!--</h3>-->
-    <!--</div>-->
-    <!--<div class="col-7">-->
-      <!--<div class="row">-->
-        <!--<div class="col-11 wbdv-search-input">-->
-          <!--<input class="form-control"-->
-                 <!--[(ngModel)]="searchText"-->
-                 <!--(keyup.enter)="navigate(searchText)"-->
-                 <!--placeholder="Search for recipes"/>-->
-        <!--</div>-->
-        <!--<button type="button"-->
-                <!--(click)="navigate(searchText)"-->
-                <!--class="btn btn-dark wbdv-search-button">-->
-          <!--<span class="fa fa-search"></span>-->
-        <!--</button>-->
-      <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-3 wbdv-login-register">-->
-      <!--<div *ngIf="!currentUser['username']">-->
-        <!--<a routerLink="/register">-->
-          <!--<button class="btn btn-outline-light my-2 my-sm-0 float-right"-->
-                  <!--type="button">-->
-            <!--Register-->
-          <!--</button>-->
-        <!--</a>-->
-        <!--<a routerLink="/login">-->
-          <!--<button class="btn btn-outline-light my-2 my-sm-0 float-right"-->
-                  <!--type="button">-->
-            <!--Login-->
-          <!--</button>-->
-        <!--</a>-->
-      <!--</div>-->
-      <!--<div *ngIf="currentUser['username']">-->
-        <!--<h3 class="navbar-brand float-right">-->
-          <!--<div (click)="goToProfile()"-->
-               <!--class="wbdv-username-anchor">-->
-            <!--{{currentUser['username']}}-->
-            <!--<i class="fa fa-lg fa-user-circle-o"></i>-->
-          <!--</div>-->
-        <!--</h3>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</nav>-->
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top wbdv-navbar">
   <h3 class="navbar-brand"
       (click)="goHome()">
@@ -102,6 +48,16 @@
           Register
         </button>
       </a>
+    </div>
+    <div class="form-inline my-2 my-lg-0"
+         *ngIf="currentUser['username']">
+      <h3 class="navbar-brand float-right">
+        <div (click)="goToProfile()"
+             class="wbdv-username-anchor">
+          {{currentUser['username']}}
+          <i class="fa fa-lg fa-user-circle-o"></i>
+        </div>
+      </h3>
     </div>
   </div>
 </nav>
