--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -1,59 +1,129 @@
-<nav class="navbar navbar-dark bg-dark justify-content-between fixed-top row">
-  <div class="col-2">
-    <h3 class="navbar-brand">
-      {{user.username}}
-    </h3>
-  </div>
+<!--<nav class="navbar navbar-dark bg-dark justify-content-between row">-->
+  <!--<div class="col-2">-->
+    <!--<h3 class="navbar-brand">-->
+      <!--{{user.username}}-->
+    <!--</h3>-->
+  <!--</div>-->
 
-  <div class="col-7">
-    <div class="row">
-      <div class="col-11 wbdv-search-input">
-        <input class="form-control"
-               [(ngModel)]="searchText"
-               (keyup.enter)="navigate(searchText)"
-               placeholder="Search for recipes"/>
-      </div>
+  <!--<div class="col-7">-->
+    <!--<div class="row">-->
+      <!--<div class="col-11 wbdv-search-input">-->
+        <!--<input class="form-control"-->
+               <!--[(ngModel)]="searchText"-->
+               <!--(keyup.enter)="navigate(searchText)"-->
+               <!--placeholder="Search for recipes"/>-->
+      <!--</div>-->
+      <!--<button type="button"-->
+              <!--(click)="navigate(searchText)"-->
+              <!--class="btn btn-dark wbdv-search-button">-->
+        <!--<span class="fa fa-search"></span>-->
+      <!--</button>-->
+    <!--</div>-->
+  <!--</div>-->
+
+  <!--<div class="col-3">-->
+  <!--<form class="form-inline float-right">-->
+    <!--<a routerLink="/home">-->
+      <!--<button class="btn btn-outline-light my-2 my-sm-0"-->
+              <!--type="button">-->
+        <!--Home-->
+      <!--</button>-->
+    <!--</a>-->
+    <!--<div *ngIf="!currentUser['username']">-->
+      <!--<a routerLink="/register">-->
+        <!--<button class="btn btn-outline-light my-2 my-sm-0 float-right"-->
+                <!--type="button">-->
+          <!--Register-->
+        <!--</button>-->
+      <!--</a>-->
+      <!--<a routerLink="/login">-->
+        <!--<button class="btn btn-outline-light my-2 my-sm-0 float-right"-->
+                <!--type="button">-->
+          <!--Login-->
+        <!--</button>-->
+      <!--</a>-->
+    <!--</div>-->
+    <!--<div *ngIf="currentUser['username']">-->
+      <!--<h3 class="navbar-brand float-right wbdv-username">-->
+        <!--<div (click)="goToProfile()">-->
+          <!--{{currentUser['username']}}-->
+          <!--<i class="fa fa-lg fa-user-circle-o"></i>-->
+        <!--</div>-->
+      <!--</h3>-->
+    <!--</div>-->
+  <!--</form>-->
+  <!--</div>-->
+<!--</nav>-->
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <button class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          (click)="isCollapsed = !isCollapsed"
+          [attr.aria-expanded]="!isCollapsed"
+          aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse"
+       [ngbCollapse]="isCollapsed"
+       id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+    </ul>
+    <div class="form-inline my-2 my-lg-0">
+      <input class="form-control wbdv-navbar-search"
+             [(ngModel)]="searchText"
+             (keyup.enter)="navigate(searchText)"
+             placeholder="Search for recipes"/>
       <button type="button"
               (click)="navigate(searchText)"
               class="btn btn-dark wbdv-search-button">
         <span class="fa fa-search"></span>
       </button>
     </div>
-  </div>
-
-  <div class="col-3">
-  <form class="form-inline float-right">
-    <a routerLink="/home">
-      <button class="btn btn-outline-light my-2 my-sm-0"
-              type="button">
-        Home
-      </button>
-    </a>
-    <div *ngIf="!currentUser['username']">
-      <a routerLink="/register">
-        <button class="btn btn-outline-light my-2 my-sm-0 float-right"
+    <div class="form-inline my-2 my-lg-0">
+      <a routerLink="/home">
+        <button class="btn btn-outline-light my-2 my-sm-0"
                 type="button">
-          Register
+          Home
         </button>
       </a>
+    </div>
+
+    <div class="form-inline my-2 my-lg-0"
+         *ngIf="!currentUser['username']">
       <a routerLink="/login">
-        <button class="btn btn-outline-light my-2 my-sm-0 float-right"
+        <button class="btn btn-outline-light my-2 my-sm-0"
                 type="button">
           Login
         </button>
       </a>
     </div>
-    <div *ngIf="currentUser['username']">
+
+    <div class="form-inline my-2 my-lg-0"
+         *ngIf="!currentUser['username']">
+      <a routerLink="/register">
+        <button class="btn btn-outline-light my-2 my-sm-0"
+                type="button">
+          Register
+        </button>
+      </a>
+    </div>
+
+    <div class="form-inline my-2 my-lg-0"
+         *ngIf="currentUser['username']">
       <h3 class="navbar-brand float-right wbdv-username">
-        <div (click)="goToProfile()">
+        <div (click)="goToProfile()"
+             class="wbdv-username-anchor ">
           {{currentUser['username']}}
           <i class="fa fa-lg fa-user-circle-o"></i>
         </div>
       </h3>
     </div>
-  </form>
   </div>
-
 </nav>
 
 <div class="wbdv-user-info-component">
