--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -142,7 +142,7 @@
     </button>
 
     <div class="row">
-      <div class="col-4">
+      <div class="col-lg-4 col-sm-12">
         <ul class="list-group">
           <li class="list-group-item wbdv-users-heading">Chefs</li>
           <li *ngFor="let chef of chefs"
@@ -159,7 +159,7 @@
         </ul>
       </div>
 
-      <div class="col-4">
+      <div class="col-lg-4 col-sm-12">
         <ul class="list-group">
           <li class="list-group-item wbdv-users-heading">Critics</li>
           <li *ngFor="let critic of critics"
@@ -176,7 +176,7 @@
         </ul>
       </div>
 
-      <div class="col-4">
+      <div class="col-lg-4 col-sm-12">
         <ul class="list-group">
           <li class="list-group-item wbdv-users-heading">Customers</li>
           <li *ngFor="let customer of customers"
@@ -274,7 +274,7 @@
     </ng-template>
 
     <div class="row">
-      <div class="col-6">
+      <div class="col-lg-6 col-sm-12">
         <ul class="list-group">
           <li class="list-group-item wbdv-users-heading">Chef's Special</li>
           <li *ngFor="let chefSpecial of chefSpecials"
@@ -291,7 +291,7 @@
         </ul>
       </div>
 
-      <div class="col-6">
+      <div class="col-lg-6 col-sm-12">
       <ul class="list-group">
         <li class="list-group-item wbdv-users-heading">Yummly's Special</li>
         <li *ngFor="let yummlySpecial of yummlySpecials"
