--- a/src/app/admin-page/admin-page.component.html
+++ b/src/app/admin-page/admin-page.component.html
@@ -233,7 +233,7 @@
         </div>
 
         <div class="form-group">
-          <label>ImageUrl (Provide 360x360 image size for quality user experience)</label>
+          <label>ImageUrl (Provide a square image of size at least 360x360)</label>
           <input [(ngModel)]="newRecipe.imageUrl"
                  placeholder="image url of recipe"
                  class="form-control"/>
@@ -292,17 +292,33 @@
       </div>
 
       <div class="col-lg-6 col-sm-12">
-      <ul class="list-group">
-        <li class="list-group-item wbdv-users-heading">Yummly's Special</li>
-        <li *ngFor="let yummlySpecial of yummlySpecials"
-            (click)="navigateToRecipe(yummlySpecial)"
-            class="list-group-item wbdv-recipe">
-          {{yummlySpecial.name}}
-          <button (click)="deleteRecipe(yummlySpecial)"
-                  class="btn btn-danger fa fa-trash float-right">
+        <ul class="list-group">
+          <li class="list-group-item wbdv-users-heading">Yummly's Special</li>
+          <li *ngFor="let yummlySpecial of yummlySpecials"
+              (click)="navigateToRecipe(yummlySpecial)"
+              class="list-group-item wbdv-recipe">
+            {{yummlySpecial.name}}
+            <button (click)="deleteRecipe(yummlySpecial)"
+                    class="btn btn-danger fa fa-trash float-right">
+            </button>
+          </li>
+        </ul>
+        <div class="wbdv-pagination-component"
+             *ngIf="yummlySpecials.length > 0">
+          <button type="button"
+                  (click)="loadPageRecipes(currentPage - 1)"
+                  [ngClass]="{'disabled':currentPage == firstPage}"
+                  class="btn btn-primary wbdv-pagination-button">
+            Previous
           </button>
-        </li>
-      </ul>
+          Page {{currentPage}} of {{lastPage}}
+          <button type="button"
+                  (click)="loadPageRecipes(currentPage + 1)"
+                  [ngClass]="{'disabled':currentPage == lastPage}"
+                  class="btn btn-primary wbdv-pagination-button">
+            Next
+          </button>
+        </div>
       </div>
     </div>
   </div>
