--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -19,6 +19,7 @@
        id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
     </ul>
+
     <div class="form-inline my-2 my-lg-0">
       <input class="form-control wbdv-navbar-search"
              [(ngModel)]="searchText"
@@ -30,6 +31,7 @@
         <span class="fa fa-search"></span>
       </button>
     </div>
+
     <div class="form-inline my-2 my-lg-0">
       <button class="btn btn-outline-light my-2 my-sm-0"
               (click)="logout()"
@@ -37,6 +39,7 @@
         Logout
       </button>
     </div>
+
     <div class="form-inline my-2 my-lg-0">
       <a routerLink="/home">
         <button class="btn btn-outline-light my-2 my-sm-0"
@@ -45,6 +48,7 @@
         </button>
       </a>
     </div>
+
     <div class="form-inline my-2 my-lg-0"
          *ngIf="user['role'] === 'Admin'">
       <a routerLink="/admin">
@@ -263,6 +267,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+
       <div class="modal-body">
         <div class="form-group">
           <label>Recipe Name</label>
@@ -280,7 +285,7 @@
         </div>
 
         <div class="form-group">
-          <label>ImageUrl (Provide 360x360 image size for quality user experience)</label>
+          <label>ImageUrl (Provide a square image of size at least 360x360)</label>
           <input [(ngModel)]="newRecipe.imageUrl"
                  placeholder="image url of recipe"
                  class="form-control"/>
@@ -311,6 +316,7 @@
           Update
         </button>
       </div>
+
       <div class="modal-footer">
         <button type="button"
                 class="btn btn-light"
